--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="third">
           <img src="img/icon/flex.png" alt="">
           <h3>Flessibile e Conveniente</h3>
-          Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.
+          <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
         </div>
       </div>
     </div>
